chamber/styles/base.css
/*Palettes*/
:root {
  --color-primary: #becbdc;
  --color-secondary: #415A77;
  --color-contrast: #1B263B;
  --color-background: #E0E1DD;
  --color-text: #0D1B2A;
}

* {
    font-family: Roboto, 'sans-serif';
}

header {
    background-color: var(--color-primary);
    padding: 20px 0 20px 10px;
    display: grid;
    grid-template-columns: 35px auto 60px;
    gap: 15px;
    font-weight: bold;
    column-gap: 15px;
}

header img {
    display: block;
    border-radius: 32px;
    width: 50px;
    height: auto;
}

header span {
    margin-top: 5px;
    font-size: 1.2rem;
    text-align: center;
}

h1 {
    text-align: center;
}

.navigation {
    display: none;
}

.navigation.show {
    display: block;
}

nav ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    font-weight: bold;
}

nav ul li {
    flex: 1;
}

nav a {
    display: block;
    background-color: var(--color-background);
    color: #3D405B;
    text-align: center;
    padding: 1rem;
    text-decoration: none;
    transition: all 0.3s ease;
}

nav a:hover {
    color: #ffffff;
    background-color: var(--color-secondary);
}

nav .active {
    color: #d7fcff;
}

.navigation li.current a {
    background-color: var(--color-primary);
}

.hamburger {
    background: none;
    border: none;
    color: #3D405B;
    cursor: pointer;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    justify-self: center;
    padding-bottom: 0;
    margin-bottom: 0;
}

.hamburger::before {
    content: "\2630";
    font-size: 2rem;
}

.hamburger.show::before {
    content: "\00D7";
    font-size: 2rem;
}

footer {
    background-color: #eee;
    padding: 1rem 10px;
    text-align: center;
}

.social {
    display: flex;
    justify-content: center;
    column-gap: 8px;
}

.social a {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 44px;
    height: 44px;
    border-radius: 32px;
    transition: all 0.3s ease-out;
}

.social img {
    width: 32px;
    height: 32px;
}

.social a:hover {
    background-color: #ddd;
}

/* Grid/List */
.menu {
	margin: 1rem auto;
	padding: 0.5rem;
	text-align: center;
}

.menu button {
    padding: 0.6rem 1.5rem;
    border-radius: 32px;
    background-color: #ddd;
    color: #0D1B2A;
    font-weight: bold;
    border: none;
    margin: 10px;
    transition: all 0.3s ease-in-out;
}

.menu button:hover {
    cursor: pointer;
    background-color: var(--color-secondary);
    color: #ffffff;
}

.menu button:active {
    transform: scale(1.1);
    transition: none;
}

/* DIRECTORY MEMBER CARDS ONLY */
#directory .member-card {
    text-align: center;
    background-color: #ddd;
    border: 3px solid #becbdc;
    padding: 5px;
    margin: 10px;
    border-radius: 15px;
}

section img {
    max-width: 100%;
    border-radius: 15px;
}

article.cards .image-container {
    width: 100%;
    height: 150px;
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    background-color: #eee;
    border-radius: 10px;
}

article.cards .image-container img {
    max-width: 100%;
    max-height: 100%;
    object-fit: contain;
    display: block;
}

article.grid {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
}

article.cards a{
    text-decoration: none;
    color: var(--color-contrast);
    font-weight: bolder;
    cursor: pointer;
    transition: all 0.3s;
}

article.cards a:hover {
    color: var(--color-secondary);
}

article.cards.list {
    display: flex;
    flex-direction: column;
    max-width: 700px;
    margin: 0 auto;
    margin-bottom: 20px;
    background-color: var(--color-background);
    padding: 10px;
    border-radius: 15px;
}

article.cards.list section {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 5px 0;
    background-color: #f2f2f2;
}

article.cards.list section img {
    display: none;
}

article.cards.list section h3,
article.cards.list section p,
article.cards.list section a {
    margin: 0 10px;
}

/* HOME PAGE CSS*/

.cta {
  text-align: center;
  margin: 0 0 30px;
}

.cta-button {
  display: inline-block;
  padding: 1rem 2rem;
  background-color: var(--color-secondary);
  color: #fff;
  text-decoration: none;
  font-size: 1.1rem;
  font-weight: bold;
  border-radius: 20px;
  transition: all 0.3s ease;
}

.cta-button:active {
    background-color: var(--color-primary);
    color: var(--color-text);
    transform: scale(1.1);
    transition: none;
}

/* WEATHER CARDS */

.weather {
    background-color: #becbdc;
    margin: 10px;
    padding: 10px;
    border-radius: 25px;
    max-width: 300px;
    text-align: center;
}

.weather figure {
    margin: 0;
}

.forecast {
    background-color: #becbdc;
    margin: 10px;
    padding: 10px;
    border-radius: 25px;
    max-width: 300px;
    text-align: center;
}

#weather-cards {
    display: flex;
    justify-content: center;
    gap: 5px;               
    flex-wrap: wrap;         
}

.hero {
    position: relative;
}

.hero img {
    width: 100%;
    height: auto;
    display: block;
    border-radius: 0;

    -webkit-mask-image: linear-gradient(
        to bottom,
        rgba(0,0,0,1) 100%,
        rgba(0,0,0,0) 100%
    );

    mask-image: linear-gradient(
        to bottom,
        rgba(0,0,0,1) 65%,
        rgba(0,0,0,0) 95%
    );
}

.hero img:hover {
    opacity: 1;
    transform: none;
    filter: none;
    transition: none;
    cursor: default;
}

.hero img,
.hero img:hover {
    border-radius: 0;
}

.hero h1 {
    font-size: 1rem;
    margin: 0;
    color: #ffffff;
    background-color: var(--color-secondary);
    padding: 0.5rem 2rem;

}

/* SPOTLIGHT CARDS */
#spotlights {
    width: 100%;
}

#spotlight-cards {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 20px;
    margin: 20px auto;
    background-color: var(--color-primary);
    padding: 15px;
    border-radius: 22px;
    max-width:300px;
    text-align: center;
    border: 5px dashed var(--color-secondary);
}

#spotlight-cards a {
    display: inline-block;
    padding: 5px 10px;
    background-color: var(--color-secondary);
    color: white;
    text-decoration: none;
    font-weight: 600;
    border-radius: 32px;
    transition: background-color 0.3s ease, transform 0.2s ease;
}

#spotlight-cards a:hover {
    transform: scale(1.05);
    background-color: var(--color-contrast);
}

